--- a/pom.xml
+++ b/pom.xml
@@ -46,4 +46,8 @@
 			<version>2.8.0</version>
 		</dependency>
 	</dependencies>
+    <properties>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
+    </properties>
 </project>
