--- a/pom.xml
+++ b/pom.xml
@@ -41,9 +41,9 @@
             <version>3.9.1</version>
         </dependency>
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.2</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.3</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
